<resources>
    <string name="app_name">reto</string>
    <string name="open">abrir</string>
    <string name="close">cerrar</string>
    <string name="invitado"><i>O continua como invitado</i></string>
    <string name="contra">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="login"><b>Inciar Sesión</b></string>
    <string name="registro"><b>Registrarse</b></string>
    <string name="email">E-mail</string>
    <string name="swithcCamaras">Mostrar camaras</string>
    <string name="swithcIncidencias">Mostrar incidencias</string>
    <string name="camaras">Camaras</string>
    <string name="incidencias">Incidencias</string>
    <string name="ano">Año:</string>
    <string name="idIncidencia"><b>ID de la incidencia:</b></string>
    <string name="registroCoche"><b>Nivel de la incidencia:</b></string>
    <string name="carreteraIncidencia"><b>Carretera Afectada:</b></string>
    <string name="localidadIncidencia"><b>Localidad de la incidencia:</b></string>
    <string name="idCamara"><b>ID de la camara: </b></string>
    <string name="localidadCamara"><b>Localidad de la camara: </b></string>
    <string name="imagenCamara"><b>Imagen de la camara:</b></string>
    <string name="carreteraCamara"><b>Carretera vigilada:</b></string>
    <string-array name="year_array">
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
    </string-array>
</resources>