<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeOscuro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/standard_bottom_sheet"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="562dp"
        android:backgroundTint="@color/verdeOscuro"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@color/verdeOscuro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tituloCamara"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Incidencia"
            android:textColor="@color/texto"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drag_handle" />

        <TextView
            android:id="@+id/idCamara"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/idCamara"
            android:textColor="@color/texto"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tituloCamara" />

        <TextView
            android:id="@+id/idCamaraVar"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="52dp"
            android:text="a"
            android:textColor="@color/texto"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tituloCamara" />

        <TextView
            android:id="@+id/localidadCamara"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/localidadCamara"
            android:textColor="@color/texto"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloCamara" />

        <TextView
            android:id="@+id/localidadCamaraVar"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:text="b"
            android:textColor="@color/texto"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/localidadCamara" />

        <TextView
            android:id="@+id/carreteraCamara"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/carreteraCamara"
            android:textColor="@color/texto"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/localidadCamaraVar" />

        <TextView
            android:id="@+id/carreteraCamaraVar"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:text="c"
            android:textColor="@color/texto"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imagenCamara"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carreteraCamara" />

        <TextView
            android:id="@+id/imagenCamara"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/imagenCamara"
            android:textColor="@color/texto"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carreteraCamara" />

        <WebView
            android:id="@+id/imagenCamaraVar"
            android:layout_width="232dp"
            android:layout_height="203dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/verdeOscuro"
            app:layout_constraintTop_toBottomOf="@+id/imagenCamara" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
